@@ -495,6 +495,13 @@ thetvdb.language=en
 thetvdb.dvd.episodes=false
 
 ################################################################
+## FilmAffinity plugin parameters
+#
+# Specifies the search engine to be search for FilmAffinity IDs
+# Valid values are: filmaffinity or google
+filmaffinity.id.search=filmaffinity
+
+################################################################
 ## Filmweb plugin parameters
 #
 # Specifies the search engine to be search for Filmweb IDs
